--- a/package.json
+++ b/package.json
@@ -13,27 +13,28 @@
   "homepage": "https://github.com/b1tc0re/enb-make",
   "main": "index.js",
   "dependencies": {
+    "autoprefixer": "^9.5.1",
     "enb": "^1.3.0",
+    "enb-bem-examples": "^1.0.2",
     "enb-bem-techs": "^2.2.1",
     "enb-bemxjst": "^8.6.7",
+    "enb-bh": "^1.2.1",
     "enb-borschik": "https://github.com/b1tc0re/enb-borschik.git",
     "enb-js": "^1.1.0",
-    "enb-postcss": "^2.0.0",
-    "enb-modules": "^0.4.2",
-    "enb-bh": "^1.2.1",
     "enb-magic-factory": "^0.6.0",
-    "enb-bem-examples": "^1.0.2",
-    "postcss-import": "^12.0.1",
+    "enb-modules": "^0.4.2",
+    "enb-postcss": "^2.0.0",
+    "postcss-calc": "^7.0.1",
     "postcss-each": "^0.10.0",
     "postcss-for": "^2.1.1",
-    "postcss-simple-vars": "^5.0.2",
-    "postcss-calc": "^6.0.0",
+    "postcss-import": "^12.0.1",
     "postcss-nested": "^4.1.2",
-    "rebem-css": "^0.2.0",
-    "postcss-url": "^8.0.0",
-    "autoprefixer": "^9.5.1",
     "postcss-reporter": "^6.0.1",
-    "rimraf": "^2.6.3"
+    "postcss-simple-vars": "^5.0.2",
+    "postcss-url": "^8.0.0",
+    "rebem-css": "^0.2.0",
+    "rimraf": "^2.6.3",
+    "verdaccio": "^4.0.1"
   },
   "keywords": [
     "bem",
