--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "rimraf": "^2.6.3",
     "verdaccio": "^4.0.1",
     "hermione": "^2.7.1",
-    "html-reporter": "^4.6.3"
+    "html-reporter": "^4.6.3",
+    "bem-components": "^6.0.1"
   },
   "keywords": [
     "bem",
