--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "enb-make",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "ENB tech to build projects",
   "repository": {
     "type": "git",
@@ -38,7 +38,8 @@
     "postcss-url": "^8.0.0",
     "rebem-css": "^0.2.0",
     "rimraf": "^3.0.0",
-    "verdaccio": "^4.4.2"
+    "verdaccio": "^4.4.2",
+    "node-extend": "^3.0.2"
   },
   "keywords": [
     "bem",
