--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "postcss-url": "^8.0.0",
     "rebem-css": "^0.2.0",
     "rimraf": "^3.0.2",
-    "verdaccio": "^4.4.2"
+    "verdaccio": "^4.4.2",
+    "@babel/core": "^7.9.0"
   },
   "keywords": [
     "bem",
